--- a/app/globals.css
+++ b/app/globals.css
@@ -75,11 +75,32 @@
   }
 }
 
-.button-trail::before {
-  @apply absolute top-0 left-0 w-full h-full bg-pink-500; /* Using Tailwind's pink color */
-  content: '';
-  transform: scaleX(1);
-  transform-origin: left;
-  transition: transform 0.5s ease-out;
-  opacity: 0.5; /* Adjust opacity for visibility */
+/* START Remove arrows from number inputs */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+/* END Remove arrows from number inputs */
+
+/*
+    https://github.com/tailwindlabs/tailwindcss/discussions/2394
+    https://github.com/tailwindlabs/tailwindcss/pull/5732
+*/
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
